# wenet_mnn

./: README.md
convert_onnx_mnn/examples/wenetspeech/s0/: 1-export_onnx.sh  2-onnx_simplify.sh  3-convert_mnn.sh  4-validate_mnn.sh  5-export_ctc.sh  export_jit.sh  mnn_convert_format.py  modify_onnx.py
convert_onnx_mnn/examples/wenetspeech/s0/wenet/transformer/: asr_model.py  attention.py  ctc.py  embedding.py  encoder.py  encoder.py.bak  encoder_layer.py  subsampling.py
mnn_cpp_proj/: CMakeLists.txt  README.md
mnn_cpp_proj/decoder/: ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  mnn_decoder_expr.cc  mnn_decoder_expr.h  params.h
mnn_cpp_proj/frontend/: fbank.h  mnn_feature_pipeline.cc  mnn_feature_pipeline.h  wav.h
mnn_cpp_proj/utils/: mnn_utils.cc  mnn_utils.h
mnn_python_proj/: FeaturePipeline.py  README.md  mnn_chunk_infer.py  onnx_chunk_infer.py
